--- a/jorne/popup/add_article.css
+++ b/jorne/popup/add_article.css
@@ -1,5 +1,9 @@
 html, body {
+    height: 512px;
+    margin: 0;
+    padding: 0;
     width: 512px;
+    font-size: 14px;
 }
 
 body {
@@ -10,7 +14,33 @@ body {
     overflow-y: auto;
 }
 
+#header {
+    /* XXX Don't hardcode this */
+    background-color: rgba(128,128,128,0.5);
+    padding: 8px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+#title {
+    display: inline-block;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    width: 70%;
+}
+
+#submit {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    width: 20%;
+}
+
 #paragraphs {
+    margin: 48px 0 0 0;
+    overflow-y: auto;
     padding: 4px 16px 4px 4px;
 }
 
